Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/elasticsearch.adoc.po
@@ -833,7 +833,7 @@ msgstr "この動作は、 `application.properties` の `quarkus.elasticsearch.h
 #: upstream/_versions/main/guides/elasticsearch.adoc:450
 #, no-wrap
 msgid "Building a native executable"
-msgstr ""
+msgstr "ネイティブ実行可能ファイルの構築"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/elasticsearch.adoc:453
