--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-search-orm-elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-search-orm-elasticsearch.adoc.po
@@ -1450,7 +1450,7 @@ msgstr ""
 #: upstream/_versions/main/guides/hibernate-search-orm-elasticsearch.adoc:742
 #, no-wrap
 msgid "Building a native executable"
-msgstr ""
+msgstr "ネイティブ実行可能ファイルの構築"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-search-orm-elasticsearch.adoc:745
