--- a/l10n/po/ja_JP/_versions/main/guides/kafka-schema-registry-avro.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka-schema-registry-avro.adoc.po
@@ -703,7 +703,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kafka-schema-registry-avro.adoc:378
 #, no-wrap
 msgid "Building a native executable"
-msgstr ""
+msgstr "ネイティブ実行可能ファイルの構築"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-schema-registry-avro.adoc:381
