--- a/l10n/po/ja_JP/_versions/main/guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka.adoc.po
@@ -1357,6 +1357,8 @@ msgid ""
 "@Path(\"/fruits\")\n"
 "public class FruitResource {\n"
 msgstr ""
+"@Path(\"/fruits\")\n"
+"public class FruitResource {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kafka.adoc:625
