--- a/l10n/po/ja_JP/_versions/main/guides/rest-json.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/rest-json.adoc.po
@@ -283,6 +283,8 @@ msgid ""
 "@Path(\"/fruits\")\n"
 "public class FruitResource {\n"
 msgstr ""
+"@Path(\"/fruits\")\n"
+"public class FruitResource {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/rest-json.adoc:141
@@ -622,7 +624,7 @@ msgstr ""
 #: upstream/_versions/main/guides/rest-json.adoc:318
 #, no-wrap
 msgid "Building a native executable"
-msgstr ""
+msgstr "ネイティブ実行可能ファイルの構築"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/rest-json.adoc:321
