--- a/l10n/po/ja_JP/_versions/main/guides/tika.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/tika.adoc.po
@@ -460,7 +460,7 @@ msgstr ""
 #: upstream/_versions/main/guides/tika.adoc:212
 #, no-wrap
 msgid "Building a native executable"
-msgstr ""
+msgstr "ネイティブ実行可能ファイルの構築"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/tika.adoc:216
