--- a/l10n/po/ja_JP/_versions/main/guides/amazon-dynamodb.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/amazon-dynamodb.adoc.po
@@ -605,6 +605,8 @@ msgid ""
 "@Path(\"/fruits\")\n"
 "public class FruitResource {\n"
 msgstr ""
+"@Path(\"/fruits\")\n"
+"public class FruitResource {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/amazon-dynamodb.adoc:298
