--- a/l10n/po/ja_JP/_versions/main/guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/mongodb.adoc.po
@@ -433,6 +433,8 @@ msgid ""
 "@Path(\"/fruits\")\n"
 "public class FruitResource {\n"
 msgstr ""
+"@Path(\"/fruits\")\n"
+"public class FruitResource {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/mongodb.adoc:206
@@ -1232,7 +1234,7 @@ msgstr ""
 #: upstream/_versions/main/guides/mongodb.adoc:643
 #, no-wrap
 msgid "Building a native executable"
-msgstr ""
+msgstr "ネイティブ実行可能ファイルの構築"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/mongodb.adoc:646
