--- a/l10n/po/ja_JP/_versions/main/guides/openapi-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/openapi-swaggerui.adoc.po
@@ -196,6 +196,8 @@ msgid ""
 "@Path(\"/fruits\")\n"
 "public class FruitResource {\n"
 msgstr ""
+"@Path(\"/fruits\")\n"
+"public class FruitResource {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/openapi-swaggerui.adoc:93
