--- a/l10n/po/ja_JP/_versions/main/guides/spring-data-jpa.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/spring-data-jpa.adoc.po
@@ -429,6 +429,8 @@ msgid ""
 "@Path(\"/fruits\")\n"
 "public class FruitResource {\n"
 msgstr ""
+"@Path(\"/fruits\")\n"
+"public class FruitResource {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/spring-data-jpa.adoc:216
