--- a/l10n/po/ja_JP/books.md.po
+++ b/l10n/po/ja_JP/books.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-02 14:41+0900\n"
+"POT-Creation-Date: 2021-05-20 11:10+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -37,5 +37,5 @@ msgstr ""
 #. type: YAML Front Matter: title
 #: upstream/books.md:1
 #, no-wrap
-msgid "Quarkus - Books"
+msgid "Books"
 msgstr ""
