Add machine translation

--- a/l10n/po/ja_JP/_guides/topic/community.adoc.po
+++ b/l10n/po/ja_JP/_guides/topic/community.adoc.po
@@ -36,9 +36,9 @@ msgstr ""
 
 #. type: Title =
 #: upstream/_guides/topic/community.adoc:6
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Community"
-msgstr ""
+msgstr "コミュニティ"
 
 #. type: Title ==
 #: upstream/_guides/topic/community.adoc:8
