--- a/l10n/po/ja_JP/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc.po
@@ -94,18 +94,18 @@ msgstr ""
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:25
 #, no-wrap
 msgid "Migration Guide"
-msgstr ""
+msgstr "移行ガイド"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:28
 msgid "We will keep the Migration Guide up to date here: https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0."
-msgstr ""
+msgstr "マイグレーションガイドは、こちら: https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0 で随時更新していきます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:29
 #, no-wrap
 msgid "Documentation"
-msgstr ""
+msgstr "ドキュメント"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:32
@@ -116,7 +116,7 @@ msgstr ""
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:33
 #, no-wrap
 msgid "Full Changelog"
-msgstr ""
+msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:36
@@ -127,34 +127,34 @@ msgstr ""
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:37
 #, no-wrap
 msgid "Come Join Us"
-msgstr ""
+msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:40
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr ""
+msgstr "私達は皆様からのフィードバックに重きを置いています。バグ報告、改善要望を是非お願いします。一緒に素晴らしいものを作り上げていきましょう!"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:42
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr ""
+msgstr "Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらずにコミュニティに参加して下さい!:"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:44
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr ""
+msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:45
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr ""
+msgstr "コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] を送信"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:46
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr ""
+msgstr "https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:46
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr ""
+msgstr "https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
