Add machine translation

--- a/l10n/po/ja_JP/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.0.0.Alpha3 released - GraalVM 21.1, SmallRye GraphQL Client...'\n"
@@ -34,61 +34,79 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 2.0.0.Alpha3リリース - GraalVM 21.1、SmallRye GraphQL Client...'\n"
+"date: 2021-05-20\n"
+"tags: release\n"
+"synopsis: 私たちは、Quarkus 2.0に向けて前進し続けています。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:11
+#, fuzzy
 msgid "We just released our third Alpha for Quarkus 2.0 which contains several enhancements and new features:"
-msgstr ""
+msgstr "Quarkus 2.0の3番目のアルファ版をリリースしました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:13
+#, fuzzy
 msgid "https://github.com/quarkusio/quarkus/pull/17014[#17014] - Update to GraalVM 21.1"
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/pull/17014[#17014]- GraalVM 21.1へのアップデート"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:14
+#, fuzzy
 msgid "https://github.com/quarkusio/quarkus/pull/17350[#17350] - SmallRye GraphQL Client extension + 1.2.1 upgrade"
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/pull/17350[#17350]- SmallRye GraphQL Client extension + 1.2.1 upgrade"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:15
+#, fuzzy
 msgid "https://github.com/quarkusio/quarkus/pull/16857[#16857] - Add Amazon SSM extension"
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/pull/16857[#16857]- Amazon SSMエクステンションの追加"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:16
+#, fuzzy
 msgid "https://github.com/quarkusio/quarkus/pull/16963[#16963] - Add `quarkus:test` goal"
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/pull/16963[#16963]- `quarkus:test` ゴールを追加"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:17
+#, fuzzy
 msgid "https://github.com/quarkusio/quarkus/pull/17232[#17232] - Introduce coroutine support in Reactive Messaging"
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/pull/17232[#17232]- Reactive Messagingにおけるcoroutineサポートの導入"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:18
+#, fuzzy
 msgid "https://github.com/quarkusio/quarkus/pull/17056[#17056] - Add support for coroutines to the rest client"
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/pull/17056[#17056]- restクライアントにコルーチンのサポートを追加"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:19
+#, fuzzy
 msgid "https://github.com/quarkusio/quarkus/pull/16951[#16951] - Add support for hibernate.metadata_builder_contributor"
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/pull/16951[#16951]- hibernate.metadata_builder_contributor のサポートを追加しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:21
+#, fuzzy
 msgid "If you have missed our previous announcements:"
-msgstr ""
+msgstr "これまでのお知らせを見逃していた方。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:23
+#, fuzzy
 msgid "link:/blog/quarkus-2-0-0-alpha1-released/[2.0.0.Alpha1 announcement]"
-msgstr ""
+msgstr "link:/blog/quarkus-2-0-0-alpha1-released/[2.0.0.α1発表]"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:24
+#, fuzzy
 msgid "link:/blog/quarkus-2-0-0-alpha2-released/[2.0.0.Alpha2 announcement]"
-msgstr ""
+msgstr "link:/blog/quarkus-2-0-0-alpha2-released/[2.0.0.α2発表]"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:25
@@ -109,8 +127,9 @@ msgstr "ドキュメント"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:32
+#, fuzzy
 msgid "The documentation for the `main` branch is available link:/version/main/guides/[on the website]."
-msgstr ""
+msgstr "`main` ブランチのドキュメントは link:/version/main/guides/[ウェブサイトで]公開されています。"
 
 #. type: Title ===
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:33
@@ -120,8 +139,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:36
+#, fuzzy
 msgid "You can get the full changelogs of https://github.com/quarkusio/quarkus/releases/tag/2.0.0.Alpha3[2.0.0.Alpha3] on GitHub."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.0.0.Alpha3[2.0.0.Alpha3]の完全な変更履歴はGitHubに掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:37
