--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-11 02:54+0000\n"
+"POT-Creation-Date: 2021-05-21 02:33+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -58,6 +58,10 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:35
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:99
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:117
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:155
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:164
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:173
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:184
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -81,6 +85,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:76
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:108
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:146
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:193
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -133,7 +138,8 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:58
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:79
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:148
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:149
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:195
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
@@ -267,5 +273,67 @@ msgid ""
 "--\n"
 "Whether this particular data source should be excluded from the health check if the general health check for data sources is enabled. \n"
 " By default, the health check includes all configured data sources (if it is enabled).\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:154
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.username]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.username[quarkus.datasource.\"datasource-name\".username]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The datasource username\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:163
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.password]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.password[quarkus.datasource.\"datasource-name\".password]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The datasource password\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:172
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.credentials-provider]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.credentials-provider[quarkus.datasource.\"datasource-name\".credentials-provider]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The credentials provider name\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:183
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.credentials-provider-name]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.credentials-provider-name[quarkus.datasource.\"datasource-name\".credentials-provider-name]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The credentials provider bean name. \n"
+" It is the `&++#++64;Named` value of the credentials provider bean. It is used to discriminate if multiple CredentialsProvider beans are available. \n"
+" For Vault it is: vault-credentials-provider. Not necessary if there is only one credentials provider available.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-build-time-config.adoc:192
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.start-container]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.start-container[quarkus.datasource.\"datasource-name\".start-container]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"If this is true then when running in dev or test mode Quarkus will attempt to start a testcontainers based database with these provided settings. This is not supported for all databases, and will not work in production.\n"
 "--"
 msgstr ""
