Translate 2021-05-20-quarkus-2-0-0-alpha3-released.adoc.po

--- a/l10n/po/ja_JP/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-05-20 20:03+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-05-21 22:33+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.0.0.Alpha3 released - GraalVM 21.1, SmallRye GraphQL Client...'\n"
@@ -44,69 +44,58 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:11
-#, fuzzy
 msgid "We just released our third Alpha for Quarkus 2.0 which contains several enhancements and new features:"
-msgstr "Quarkus 2.0の3番目のアルファ版をリリースしました。"
+msgstr "Quarkus 2.0の3番目のアルファ版をリリースしました。いくつもの機能強化と新機能を含みます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:13
-#, fuzzy
 msgid "https://github.com/quarkusio/quarkus/pull/17014[#17014] - Update to GraalVM 21.1"
 msgstr "link:https://github.com/quarkusio/quarkus/pull/17014[#17014]- GraalVM 21.1へのアップデート"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:14
-#, fuzzy
 msgid "https://github.com/quarkusio/quarkus/pull/17350[#17350] - SmallRye GraphQL Client extension + 1.2.1 upgrade"
-msgstr "link:https://github.com/quarkusio/quarkus/pull/17350[#17350]- SmallRye GraphQL Client extension + 1.2.1 upgrade"
+msgstr "link:https://github.com/quarkusio/quarkus/pull/17350[#17350]- SmallRye GraphQL クライアントエクステンション + 1.2.1 アップグレード"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:15
-#, fuzzy
 msgid "https://github.com/quarkusio/quarkus/pull/16857[#16857] - Add Amazon SSM extension"
 msgstr "link:https://github.com/quarkusio/quarkus/pull/16857[#16857]- Amazon SSMエクステンションの追加"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:16
-#, fuzzy
 msgid "https://github.com/quarkusio/quarkus/pull/16963[#16963] - Add `quarkus:test` goal"
 msgstr "link:https://github.com/quarkusio/quarkus/pull/16963[#16963]- `quarkus:test` ゴールを追加"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:17
-#, fuzzy
 msgid "https://github.com/quarkusio/quarkus/pull/17232[#17232] - Introduce coroutine support in Reactive Messaging"
 msgstr "link:https://github.com/quarkusio/quarkus/pull/17232[#17232]- Reactive Messagingにおけるcoroutineサポートの導入"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:18
-#, fuzzy
 msgid "https://github.com/quarkusio/quarkus/pull/17056[#17056] - Add support for coroutines to the rest client"
 msgstr "link:https://github.com/quarkusio/quarkus/pull/17056[#17056]- restクライアントにコルーチンのサポートを追加"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:19
-#, fuzzy
 msgid "https://github.com/quarkusio/quarkus/pull/16951[#16951] - Add support for hibernate.metadata_builder_contributor"
-msgstr "link:https://github.com/quarkusio/quarkus/pull/16951[#16951]- hibernate.metadata_builder_contributor のサポートを追加しました。"
+msgstr "link:https://github.com/quarkusio/quarkus/pull/16951[#16951]- hibernate.metadata_builder_contributor のサポートを追加"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:21
-#, fuzzy
 msgid "If you have missed our previous announcements:"
-msgstr "これまでのお知らせを見逃していた方。"
+msgstr "これまでのアナウンスを見逃していた方へ:"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:23
-#, fuzzy
 msgid "link:/blog/quarkus-2-0-0-alpha1-released/[2.0.0.Alpha1 announcement]"
-msgstr "link:/blog/quarkus-2-0-0-alpha1-released/[2.0.0.α1発表]"
+msgstr "link:/blog/quarkus-2-0-0-alpha1-released/[2.0.0.Alpha1アナウンス]"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:24
-#, fuzzy
 msgid "link:/blog/quarkus-2-0-0-alpha2-released/[2.0.0.Alpha2 announcement]"
-msgstr "link:/blog/quarkus-2-0-0-alpha2-released/[2.0.0.α2発表]"
+msgstr "link:/blog/quarkus-2-0-0-alpha2-released/[2.0.0.Alpha2アナウンス]"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:25
@@ -127,9 +116,8 @@ msgstr "ドキュメント"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:32
-#, fuzzy
 msgid "The documentation for the `main` branch is available link:/version/main/guides/[on the website]."
-msgstr "`main` ブランチのドキュメントは link:/version/main/guides/[ウェブサイトで]公開されています。"
+msgstr "`main` ブランチのドキュメントは link:/version/main/guides/[ウェブサイト] で公開されています。"
 
 #. type: Title ===
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:33
@@ -139,7 +127,6 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc:36
-#, fuzzy
 msgid "You can get the full changelogs of https://github.com/quarkusio/quarkus/releases/tag/2.0.0.Alpha3[2.0.0.Alpha3] on GitHub."
 msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.0.0.Alpha3[2.0.0.Alpha3]の完全な変更履歴はGitHubに掲載されています。"
 
