--- a/l10n/po/ja_JP/_guides/funqy-gcp-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-gcp-functions-http.adoc.po
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_guides/funqy-gcp-functions-http.adoc:6
 #, no-wrap
 msgid "Quarkus - Funqy HTTP Binding with Google Cloud Functions"
-msgstr "Quarkus - Google Cloud 機能を使用した Funqy HTTP バインディング"
+msgstr "Quarkus - Google Cloud Functionsを使用した Funqy HTTP バインディング"
 
 #. type: Plain text
 #: upstream/_guides/funqy-gcp-functions-http.adoc:14
