--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-reactive-datasource.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-reactive-datasource.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:37+0000\n"
+"POT-Creation-Date: 2021-05-25 02:37+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -161,7 +161,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The datasource pool maximum size. Note that a separate pool instance is started for each thread using it: the size limits each individual pool instance.\n"
+"The datasource pool maximum size.\n"
 "--"
 msgstr ""
 
@@ -531,7 +531,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The datasource pool maximum size. Note that a separate pool instance is started for each thread using it: the size limits each individual pool instance.\n"
+"The datasource pool maximum size.\n"
 "--"
 msgstr ""
 
