Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/config-mappings.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/config-mappings.adoc.po
@@ -740,7 +740,7 @@ msgstr ""
 #: upstream/_versions/main/guides/config-mappings.adoc:408
 #, no-wrap
 msgid "Validation"
-msgstr ""
+msgstr "バリデーション"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:412
