--- a/l10n/po/ja_JP/_versions/main/guides/smallrye-graphql-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/smallrye-graphql-client.adoc.po
@@ -39,12 +39,12 @@ msgstr ""
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:25
 #, no-wrap
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:28
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:30
@@ -54,7 +54,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:31
 msgid "an IDE"
-msgstr ""
+msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:32
@@ -64,7 +64,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:33
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version}"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:34
@@ -96,17 +96,17 @@ msgstr ""
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:54
 #, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:58
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr ""
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:60
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone-url}` 、 {quickstarts-archive-url}[アーカイブ] をダウンロードします。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:62
@@ -122,7 +122,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:66
 msgid "First, we need a new project. Create a new project with the following command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:75
@@ -155,7 +155,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:88
 msgid "This will add the following to your `pom.xml`:"
-msgstr ""
+msgstr "これにより、 `pom.xml` に以下が追加されます:"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:95
@@ -574,7 +574,7 @@ msgstr ""
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:330
 #, no-wrap
 msgid "Running the application"
-msgstr ""
+msgstr "アプリケーションの実行"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:333
@@ -585,7 +585,7 @@ msgstr ""
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:337
 #, no-wrap
 msgid "./mvnw quarkus:dev\n"
-msgstr ""
+msgstr "./mvnw quarkus:dev\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:340
@@ -609,7 +609,7 @@ msgstr ""
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:350
 #, no-wrap
 msgid "Conclusion"
-msgstr ""
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:353
