--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-reactive-messaging-reactive-messaging-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-reactive-messaging-reactive-messaging-configuration.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-05-26 02:43+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -53,12 +53,26 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-reactive-messaging-reactive-messaging-configuration.adoc:17
+#: upstream/_generated-config/main/config/quarkus-reactive-messaging-reactive-messaging-configuration.adoc:26
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-reactive-messaging-reactive-messaging-configuration.adoc:19
+#: upstream/_generated-config/main/config/quarkus-reactive-messaging-reactive-messaging-configuration.adoc:20
+#: upstream/_generated-config/main/config/quarkus-reactive-messaging-reactive-messaging-configuration.adoc:28
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-reactive-messaging-reactive-messaging-configuration.adoc:25
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-reactive-messaging-reactive-messaging-configuration_quarkus.reactive-messaging.strict]]`link:#quarkus-reactive-messaging-reactive-messaging-configuration_quarkus.reactive-messaging.strict[quarkus.reactive-messaging.strict]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Enables or disables the strict validation mode.\n"
+"--"
+msgstr ""
