Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/maven-tooling.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/maven-tooling.adoc.po
@@ -1271,7 +1271,7 @@ msgstr ""
 #: upstream/_versions/main/guides/maven-tooling.adoc:668
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_versions/main/guides/maven-tooling.adoc:670
