Add machine translation

--- a/l10n/po/ja_JP/_guides/optaplanner.adoc.po
+++ b/l10n/po/ja_JP/_guides/optaplanner.adoc.po
@@ -1358,13 +1358,15 @@ msgstr "アプリケーションのテスト"
 
 #. type: Plain text
 #: upstream/_guides/optaplanner.adoc:717
+#, fuzzy
 msgid "To test each constraint in isolation, use a `ConstraintVerifier` in unit tests. This tests each constraint's corner cases in isolation from the other tests, which lowers maintenance when adding a new constraint with proper test coverage."
-msgstr ""
+msgstr "各制約を分離してテストするには、ユニットテストで `ConstraintVerifier` を使用します。これは、各制約のコーナーケースを他のテストから分離してテストするもので、適切なテストカバレッジで新しい制約を追加する際のメンテナンスを軽減します。"
 
 #. type: Plain text
 #: upstream/_guides/optaplanner.adoc:719
+#, fuzzy
 msgid "Add a `optaplanner-test` dependency in your `pom.xml`:"
-msgstr ""
+msgstr "`optaplanner-test` の依存関係を `pom.xml` に追加してください。"
 
 #. type: delimited block -
 #: upstream/_guides/optaplanner.adoc:726
@@ -1475,13 +1477,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/optaplanner.adoc:780
+#, fuzzy
 msgid "This test verifies that the constraint `TimeTableConstraintProvider::roomConflict`, when given three lessons in the same room, where two lessons have the same timeslot, it penalizes with a match weight of `1`. So with a constraint weight of `10hard` it would reduce the score by `-10hard`."
-msgstr ""
+msgstr "このテストでは、同じ部屋で3つのレッスンが与えられ、2つのレッスンが同じタイムスロットであるとき、制約 `TimeTableConstraintProvider::roomConflict` が `1` のマッチウェイトでペナルティを与えることを検証します。そのため、 `10hard` の制約の重みでは、 `-10hard` のスコアが減少します。"
 
 #. type: Plain text
 #: upstream/_guides/optaplanner.adoc:782
+#, fuzzy
 msgid "Notice how `ConstraintVerifier` ignores the constraint weight during testing - even if those constraint weights are hard coded in the `ConstraintProvider` - because constraints weights change regularly before going into production. This way, constraint weight tweaking does not break the unit tests."
-msgstr ""
+msgstr "`ConstraintVerifier` がテスト中に制約の重みを無視していることに注目してください。たとえそれらの制約の重みが `ConstraintProvider` にハードコードされていても、制約の重みは生産に入る前に定期的に変更されるからです。このようにして、制約の重みを微調整しても、ユニットテストは壊れません。"
 
 #. type: Title ====
 #: upstream/_guides/optaplanner.adoc:783
