--- a/l10n/po/ja_JP/_posts/2021-05-26-quarkus-1-13-5-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-05-26-quarkus-1-13-5-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-05-26-quarkus-1-13-5-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-26-quarkus-1-13-5-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.13.5.Final released - Maintenance release'\n"
@@ -34,16 +34,25 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 1.13.5.Final released - Maintenance release'\n"
+"date: 2021-05-26\n"
+"tags: release\n"
+"synopsis: 1.13.5.Finalは、1.13リリーストレインのメンテナンスリリースです。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-26-quarkus-1-13-5-final-released.adoc:11
+#, fuzzy
 msgid "We released 1.13.5.Final today with a new set of bugfixes for our 1.13 release."
-msgstr ""
+msgstr "本日、1.13リリースのバグフィックスを含む1.13.5.Finalをリリースしました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-26-quarkus-1-13-5-final-released.adoc:13
+#, fuzzy
 msgid "1.13.5.Final is a safe upgrade for everyone using Quarkus 1.13."
-msgstr ""
+msgstr "1.13.5.Finalは、Quarkus 1.13を使用しているすべての人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-26-quarkus-1-13-5-final-released.adoc:15
@@ -58,24 +67,27 @@ msgstr "変更点"
 
 #. type: Title ===
 #: upstream/_posts/2021-05-26-quarkus-1-13-5-final-released.adoc:18
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Maven 3.8.1"
-msgstr ""
+msgstr "Maven 3.8.1"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-26-quarkus-1-13-5-final-released.adoc:21
+#, fuzzy
 msgid "Given there are a couple of CVEs in Maven 3.6, we upgraded the Maven version included in the generated projects to 3.8.1 (the one from the Maven wrapper)."
-msgstr ""
+msgstr "Maven 3.6 にはいくつかの CVE が存在するため、生成されたプロジェクトに含まれる Maven のバージョンを 3.8.1 (Maven ラッパーのもの) にアップグレードしました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-26-quarkus-1-13-5-final-released.adoc:23
+#, fuzzy
 msgid "We also upgraded our Maven internal dependencies to 3.8.1."
-msgstr ""
+msgstr "また、Mavenの内部依存関係を3.8.1にアップグレードしました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-26-quarkus-1-13-5-final-released.adoc:25
+#, fuzzy
 msgid "You can still use Maven 3.6 if you are so inclined."
-msgstr ""
+msgstr "その気になれば、Maven 3.6を使うこともできます。"
 
 #. type: Title ===
 #: upstream/_posts/2021-05-26-quarkus-1-13-5-final-released.adoc:26
@@ -85,8 +97,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-26-quarkus-1-13-5-final-released.adoc:29
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.13.5.Final[the full changelog of 1.13.5.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.5.Final[1.13.5.Finalの完全な変更履歴はGitHubに]掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-26-quarkus-1-13-5-final-released.adoc:30
