--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,4 +1,5 @@
 Filename, Fuzzy Messages, Total Messages, Fuzzy Words, Total Words, Achievement
+l10n/po/ja_JP/_posts/2021-05-27-quarkus-insights-qanda2.adoc.po, 0, 5, 0, 117 ,100%
 l10n/po/ja_JP/_posts/2021-05-20-quarkus-2-0-0-alpha3-released.adoc.po, 0, 26, 0, 218 ,100%
 l10n/po/ja_JP/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc.po, 0, 15, 0, 150 ,100%
 l10n/po/ja_JP/_posts/2021-05-06-quarkus-2-0-0-alpha2-released.adoc.po, 0, 23, 0, 245 ,100%
