--- a/l10n/po/ja_JP/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc.po
@@ -85,7 +85,7 @@ msgstr ""
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:28
 #, no-wrap
 msgid "Migration Guide"
-msgstr ""
+msgstr "移行ガイド"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:31
@@ -96,18 +96,18 @@ msgstr ""
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:32
 #, no-wrap
 msgid "Documentation"
-msgstr ""
+msgstr "ドキュメント"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:35
 msgid "The documentation for the `main` branch is available link:/version/main/guides/[on the website]."
-msgstr ""
+msgstr "`main` ブランチのドキュメントは link:/version/main/guides/[ウェブサイト] で公開されています。"
 
 #. type: Title ===
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:36
 #, no-wrap
 msgid "Full Changelog"
-msgstr ""
+msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:39
@@ -118,34 +118,34 @@ msgstr ""
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:40
 #, no-wrap
 msgid "Come Join Us"
-msgstr ""
+msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:43
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr ""
+msgstr "私達は皆様からのフィードバックに重きを置いています。バグ報告、改善要望を是非お願いします。一緒に素晴らしいものを作り上げていきましょう!"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:45
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr ""
+msgstr "Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらずにコミュニティに参加して下さい!:"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:47
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr ""
+msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:48
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr ""
+msgstr "コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] を送信"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:49
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr ""
+msgstr "https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:49
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr ""
+msgstr "https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
