--- a/l10n/po/ja_JP/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.13.6.Final released - Maintenance release'\n"
@@ -34,26 +34,37 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 1.13.6.Final released - Maintenance release'\n"
+"date: 2021-05-27\n"
+"tags: release\n"
+"synopsis: 1.13.6.Finalは、1.13リリーストレインのメンテナンスリリースです。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:12
+#, fuzzy
 msgid "Unfortunately, 1.13.5.Final introduced a regression in the Hibernate Validator extension due to a Jandex issue (Jandex is our library indexing the classes and annotations)."
-msgstr ""
+msgstr "残念ながら、1.13.5.Finalでは、Jandexの問題により、Hibernate Validatorエクステンションにリグレッションが発生しました（Jandexは、クラスやアノテーションのインデックスを作成するライブラリです）。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:14
+#, fuzzy
 msgid "Thus, we released 1.13.6.Final today to mitigate the issue."
-msgstr ""
+msgstr "そこで、この問題を軽減するために、本日1.13.6.Finalをリリースしました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:16
+#, fuzzy
 msgid "1.13.6.Final is a safe upgrade for everyone using Quarkus 1.13."
-msgstr ""
+msgstr "1.13.6.Finalは、Quarkus 1.13を使用しているすべての人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:18
+#, fuzzy
 msgid "Please also check out https://quarkus.io/blog/quarkus-1-13-5-final-released/[the 1.13.5 announcement]"
-msgstr ""
+msgstr "また、 link:https://quarkus.io/blog/quarkus-1-13-5-final-released/[1.13.5のアナウンス]もご覧ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:20
@@ -68,8 +79,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:24
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.13.6.Final[the full changelog of 1.13.6.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.6.Final[1.13.6.Finalの完全な変更履歴は、GitHubに]掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:25
