--- a/l10n/po/ja_JP/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.0.0.CR2 released - Towards Final'\n"
@@ -34,52 +34,67 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 2.0.0.CR2リリース - Towards Final'\n"
+"date: 2021-05-27\n"
+"tags: release\n"
+"synopsis: 2.0.0.Finalのリリース前の最後の砦です。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:11
+#, fuzzy
 msgid "We just started the candidate release cycle for 2.0.0.Final."
-msgstr ""
+msgstr "2.0.0.Finalの候補リリースサイクルを開始しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:13
+#, fuzzy
 msgid "Feedback is very welcome so if you have a Quarkus app around, please give it a go."
-msgstr ""
+msgstr "フィードバックをお待ちしておりますので、Quarkusのアプリをお持ちの方はぜひお試しください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:15
+#, fuzzy
 msgid "Make sure you update both the BOM version and the Quarkus Maven Plugin version to 2.0.0.CR2."
-msgstr ""
+msgstr "BOMのバージョンとQuarkus Maven Pluginのバージョンの両方を2.0.0.CR2にアップデートしてください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:17
+#, fuzzy
 msgid "Also, we only publish the `quarkus-bom` for non-Final releases so make sure you use this BOM and not the `quarkus-universe-bom` for testing."
-msgstr ""
+msgstr "また、最終版以外のリリースでは `quarkus-bom` のみを公開していますので、テスト用には `quarkus-universe-bom` ではなく、このBOMを使用してください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:18
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Small issue with IDEs"
-msgstr ""
+msgstr "IDEに関する小さな問題"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:21
+#, fuzzy
 msgid "We noticed a last minute issue with IDEs today related to a new annotation processor we introduced."
-msgstr ""
+msgstr "本日、導入した新しいアノテーションプロセッサに関連して、直前になってIDEに問題が発生しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:23
+#, fuzzy
 msgid "The workaround for now is to disable annotation processors in your IDE (that might not work very well if you're using others though)."
-msgstr ""
+msgstr "今のところの回避策は、IDEでアノテーションプロセッサを無効にすることです（他のものを使用している場合は、あまりうまくいかないかもしれません）。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:25
+#, fuzzy
 msgid "For instance, for Eclipse users, you can add the `<m2e.apt.activation>disabled</m2e.apt.activation>` property in your POM file."
-msgstr ""
+msgstr "例えば、Eclipseユーザーの場合は、POMファイルに `&amp;lt;m2e.apt.activation&amp;gt;disabled&amp;lt;/m2e.apt.activation&amp;gt;` プロパティを追加することができます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:27
+#, fuzzy
 msgid "Anyway, this issue shouldn't prevent you from testing your existing applications and will be fixed in our Final release."
-msgstr ""
+msgstr "いずれにしても、この問題は既存のアプリケーションのテストを妨げるものではなく、最終リリースで修正される予定です。"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:28
@@ -89,8 +104,9 @@ msgstr "移行ガイド"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:31
+#, fuzzy
 msgid "We keep the Migration Guide up to date here: https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0."
-msgstr ""
+msgstr "マイグレーションガイドは、こちら https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0 ）で最新情報を発信しています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:32
@@ -111,8 +127,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:39
+#, fuzzy
 msgid "You can get the full changelogs of https://github.com/quarkusio/quarkus/releases/tag/2.0.0.CR1[2.0.0.CR1] https://github.com/quarkusio/quarkus/releases/tag/2.0.0.CR2[2.0.0.CR2] on GitHub."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.0.0.CR1[2.0.0.CR1]  link:https://github.com/quarkusio/quarkus/releases/tag/2.0.0.CR2[2.0.0.CR2]の完全な変更履歴はGitHubでご覧いただけます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:40
