--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry-tracer-exporter-jaeger-jaeger-exporter-config-jaeger-exporter-build-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry-tracer-exporter-jaeger-jaeger-exporter-config-jaeger-exporter-build-config.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-exporter-jaeger-jaeger-exporter-config-jaeger-exporter-build-config.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-exporter-jaeger-jaeger-exporter-config-jaeger-exporter-build-config.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-exporter-jaeger-jaeger-exporter-config-jaeger-exporter-build-config.adoc:17
@@ -56,10 +56,10 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-exporter-jaeger-jaeger-exporter-config-jaeger-exporter-build-config.adoc:18
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-exporter-jaeger-jaeger-exporter-config-jaeger-exporter-build-config.adoc:20
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
