Translate various blog posts on May 24th week

--- a/l10n/po/ja_JP/_posts/2021-05-27-quarkus-insights-qanda2.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-05-27-quarkus-insights-qanda2.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-05-27 11:18+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-05-28 22:37+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-insights-qanda2.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-insights-qanda2.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: About to release Quarkus 2 - ask us anything!\n"
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: Quarkus 2のリリースを間近に控え、何でも聞いてください。\n"
+"title: Quarkus 2のリリース間近 - 何でも聞いてください! \n"
 "date: 2021-05-27\n"
 "tags: insights\n"
 "synopsis: 来週の水曜日（6月2日）には、皆さんからの質問をもとにQuarkus Insightsを行います。\n"
@@ -44,18 +44,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-insights-qanda2.adoc:12
-#, fuzzy
 msgid "With Quarkus 2 approaching its imminent release and we passed 50 episodes of Quarkus Insights we want to do Q&A episode similar to what we did earlier in the year."
-msgstr "Quarkus 2のリリースが近づき、Quarkus Insightsのエピソードが50回を超えたので、今年の初めに行ったのと同じようなQ&amp;Aエピソードを行いたいと思います。"
+msgstr "Quarkus 2のリリースが近づき、Quarkus Insightsのエピソードが50回を超えたので、今年の初めに行ったのと同じようなQ&A エピソードを行いたいと思います。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-insights-qanda2.adoc:15
-#, fuzzy
 msgid "We will cover the most often asked questions we have seen and any question tagged with `#quarkusinsights` on our various social media presences: https://twitter.com/search?q=%23quarkusinsights[Twitter], https://www.facebook.com/hashtag/quarkusinsights/[Facebook] or https://www.linkedin.com/search/results/content/?keywords=%23quarkusinsights&origin=GLOBAL_SEARCH_HEADER[LinkedIn]."
-msgstr "私たちは、これまでによく見られた質問や、私たちの様々なソーシャルメディア上で `#quarkusinsights` とタグ付けされた質問を取り上げます。 link:https://twitter.com/search?q=%23quarkusinsights[Twitter]、 link:https://www.facebook.com/hashtag/quarkusinsights/[Facebook]、 link:https://www.linkedin.com/search/results/content/?keywords=%23quarkusinsights&amp;origin=GLOBAL_SEARCH_HEADER[LinkedIn]などのソーシャルメディアで「」とタグ付けされた質問を取り上げます。"
+msgstr "私たちは、これまでによく見られた質問や、私たちの様々なソーシャルメディア link:https://twitter.com/search?q=%23quarkusinsights[Twitter]、 link:https://www.facebook.com/hashtag/quarkusinsights/[Facebook]、 https://www.linkedin.com/search/results/content/?keywords=%23quarkusinsights&origin=GLOBAL_SEARCH_HEADER[LinkedIn] 上で `#quarkusinsights` とタグ付けされた質問を取り上げます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-insights-qanda2.adoc:17
-#, fuzzy
 msgid "If you have a question about Quarkus you would like answered let us know on one of thoses sites using `quarkusinsights` as a tag."
 msgstr "Quarkusについて質問がある場合は、 `quarkusinsights` をタグとして使用して、いずれかのサイトで教えていただきたいと思います。"
