--- a/l10n/po/ja_JP/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-05-27 17:32+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-05-28 22:27+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.13.6.Final released - Maintenance release'\n"
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 1.13.6.Final released - Maintenance release'\n"
+"title: 'Quarkus 1.13.6.Final リリース - メンテナンスリリース'\n"
 "date: 2021-05-27\n"
 "tags: release\n"
 "synopsis: 1.13.6.Finalは、1.13リリーストレインのメンテナンスリリースです。\n"
@@ -44,25 +44,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:12
-#, fuzzy
 msgid "Unfortunately, 1.13.5.Final introduced a regression in the Hibernate Validator extension due to a Jandex issue (Jandex is our library indexing the classes and annotations)."
 msgstr "残念ながら、1.13.5.Finalでは、Jandexの問題により、Hibernate Validatorエクステンションにリグレッションが発生しました（Jandexは、クラスやアノテーションのインデックスを作成するライブラリです）。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:14
-#, fuzzy
 msgid "Thus, we released 1.13.6.Final today to mitigate the issue."
 msgstr "そこで、この問題を軽減するために、本日1.13.6.Finalをリリースしました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:16
-#, fuzzy
 msgid "1.13.6.Final is a safe upgrade for everyone using Quarkus 1.13."
 msgstr "1.13.6.Finalは、Quarkus 1.13を使用しているすべての人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:18
-#, fuzzy
 msgid "Please also check out https://quarkus.io/blog/quarkus-1-13-5-final-released/[the 1.13.5 announcement]"
 msgstr "また、 link:https://quarkus.io/blog/quarkus-1-13-5-final-released/[1.13.5のアナウンス]もご覧ください。"
 
@@ -79,9 +75,8 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:24
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.13.6.Final[the full changelog of 1.13.6.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.6.Final[1.13.6.Finalの完全な変更履歴は、GitHubに]掲載されています。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.6.Final[GitHub上で1.13.6.Finalの完全な変更履歴] を入手できます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:25
