--- a/l10n/po/ja_JP/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-05-27 17:32+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-05-28 22:34+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.0.0.CR2 released - Towards Final'\n"
@@ -35,66 +35,58 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 2.0.0.CR2リリース - Towards Final'\n"
+"title: 'Quarkus 2.0.0.CR2リリース - Finalに向けて'\n"
 "date: 2021-05-27\n"
 "tags: release\n"
-"synopsis: 2.0.0.Finalのリリース前の最後の砦です。\n"
+"synopsis: 2.0.0.Finalのリリース前の最後の停留所です。\n"
 "author: gsmet\n"
 "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:11
-#, fuzzy
 msgid "We just started the candidate release cycle for 2.0.0.Final."
 msgstr "2.0.0.Finalの候補リリースサイクルを開始しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:13
-#, fuzzy
 msgid "Feedback is very welcome so if you have a Quarkus app around, please give it a go."
 msgstr "フィードバックをお待ちしておりますので、Quarkusのアプリをお持ちの方はぜひお試しください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:15
-#, fuzzy
 msgid "Make sure you update both the BOM version and the Quarkus Maven Plugin version to 2.0.0.CR2."
 msgstr "BOMのバージョンとQuarkus Maven Pluginのバージョンの両方を2.0.0.CR2にアップデートしてください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:17
-#, fuzzy
 msgid "Also, we only publish the `quarkus-bom` for non-Final releases so make sure you use this BOM and not the `quarkus-universe-bom` for testing."
 msgstr "また、最終版以外のリリースでは `quarkus-bom` のみを公開していますので、テスト用には `quarkus-universe-bom` ではなく、このBOMを使用してください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:18
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Small issue with IDEs"
-msgstr "IDEに関する小さな問題"
+msgstr "IDEに関する小さな課題"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:21
-#, fuzzy
 msgid "We noticed a last minute issue with IDEs today related to a new annotation processor we introduced."
-msgstr "本日、導入した新しいアノテーションプロセッサに関連して、直前になってIDEに問題が発生しました。"
+msgstr "導入した新しいアノテーションプロセッサに関連して、本日、直前になってIDEで問題が発生しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:23
-#, fuzzy
 msgid "The workaround for now is to disable annotation processors in your IDE (that might not work very well if you're using others though)."
 msgstr "今のところの回避策は、IDEでアノテーションプロセッサを無効にすることです（他のものを使用している場合は、あまりうまくいかないかもしれません）。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:25
-#, fuzzy
 msgid "For instance, for Eclipse users, you can add the `<m2e.apt.activation>disabled</m2e.apt.activation>` property in your POM file."
-msgstr "例えば、Eclipseユーザーの場合は、POMファイルに `&amp;lt;m2e.apt.activation&amp;gt;disabled&amp;lt;/m2e.apt.activation&amp;gt;` プロパティを追加することができます。"
+msgstr "例えば、Eclipseユーザーの場合は、POMファイルに `<m2e.apt.activation>disabled</m2e.apt.activation>` プロパティを追加することができます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:27
-#, fuzzy
 msgid "Anyway, this issue shouldn't prevent you from testing your existing applications and will be fixed in our Final release."
-msgstr "いずれにしても、この問題は既存のアプリケーションのテストを妨げるものではなく、最終リリースで修正される予定です。"
+msgstr "いずれにしても、この課題は既存のアプリケーションのテストを妨げるものではなく、最終リリースで修正される予定です。"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:28
@@ -104,9 +96,8 @@ msgstr "移行ガイド"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:31
-#, fuzzy
 msgid "We keep the Migration Guide up to date here: https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0."
-msgstr "マイグレーションガイドは、こちら https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0 ）で最新情報を発信しています。"
+msgstr "最新のマイグレーションガイドはこちらです: https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0."
 
 #. type: Title ==
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:32
@@ -127,9 +118,8 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:39
-#, fuzzy
 msgid "You can get the full changelogs of https://github.com/quarkusio/quarkus/releases/tag/2.0.0.CR1[2.0.0.CR1] https://github.com/quarkusio/quarkus/releases/tag/2.0.0.CR2[2.0.0.CR2] on GitHub."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.0.0.CR1[2.0.0.CR1]  link:https://github.com/quarkusio/quarkus/releases/tag/2.0.0.CR2[2.0.0.CR2]の完全な変更履歴はGitHubでご覧いただけます。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.0.0.CR1[2.0.0.CR1] link:https://github.com/quarkusio/quarkus/releases/tag/2.0.0.CR2[2.0.0.CR2]の完全な変更履歴はGitHubでご覧いただけます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc:40
