Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/mongodb-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/mongodb-panache.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:34+0000\n"
+"POT-Creation-Date: 2021-05-29 03:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1541,7 +1541,7 @@ msgstr ""
 msgid ""
 "// persist it: if you keep the default ObjectId ID field, it will be populated by the MongoDB driver,\n"
 "// and accessible when uni1 will be resolved\n"
-"Uni<Void> uni1 = person.persist();\n"
+"Uni<ReactivePerson> uni1 = person.persist();\n"
 msgstr ""
 
 #. type: delimited block -
@@ -1549,7 +1549,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "// Your must call update() in order to send your entity modifications to MongoDB\n"
-"Uni<Void> uni2 = person.update();\n"
+"Uni<ReactivePerson> uni2 = person.update();\n"
 msgstr ""
 
 #. type: delimited block -
