Update .po files

--- a/l10n/po/ja_JP/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-05-28 14:17+0000\n"
+"POT-Creation-Date: 2021-06-01 09:33+0000\n"
 "PO-Revision-Date: 2021-05-28 22:27+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -67,7 +67,7 @@ msgstr "また、 link:https://quarkus.io/blog/quarkus-1-13-5-final-released/[1.
 msgid "If you are not using 1.13 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.13[1.13 migration guide]."
 msgstr "まだ1.13を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.13[1.13移行ガイド]を参照してください。"
 
-#. type: Title ===
+#. type: Title ==
 #: upstream/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc:21
 #, no-wrap
 msgid "Full changelog"
