Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/maven-tooling.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/maven-tooling.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-02 03:05+0000\n"
+"POT-Creation-Date: 2021-06-04 02:51+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1039,14 +1039,32 @@ msgstr "マルチモジュールプロジェクト内のモジュールでCDI Be
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/maven-tooling.adoc:566
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "<build>\n"
+#| "  <plugins>\n"
+#| "    <plugin>\n"
+#| "      <groupId>org.jboss.jandex</groupId>\n"
+#| "      <artifactId>jandex-maven-plugin</artifactId>\n"
+#| "      <version>1.0.7</version>\n"
+#| "      <executions>\n"
+#| "        <execution>\n"
+#| "          <id>make-index</id>\n"
+#| "          <goals>\n"
+#| "            <goal>jandex</goal>\n"
+#| "          </goals>\n"
+#| "        </execution>\n"
+#| "      </executions>\n"
+#| "    </plugin>\n"
+#| "  </plugins>\n"
+#| "</build>\n"
 msgid ""
 "<build>\n"
 "  <plugins>\n"
 "    <plugin>\n"
 "      <groupId>org.jboss.jandex</groupId>\n"
 "      <artifactId>jandex-maven-plugin</artifactId>\n"
-"      <version>1.0.7</version>\n"
+"      <version>1.1.0</version>\n"
 "      <executions>\n"
 "        <execution>\n"
 "          <id>make-index</id>\n"
