--- a/l10n/po/ja_JP/_versions/main/guides/neo4j.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/neo4j.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:34+0000\n"
+"POT-Creation-Date: 2021-06-04 02:51+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -781,7 +781,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/neo4j.adoc:406
-msgid "If you are using a metrics extension and specify the config property `quarkus.neo4j.pool.metrics-enabled=true`, the Neo4j extension will expose several metrics related to the Neo4j connection pool."
+msgid "If you are using a metrics extension and specify the config property `quarkus.neo4j.pool.metrics.enabled=true`, the Neo4j extension will expose several metrics related to the Neo4j connection pool."
 msgstr ""
 
 #. type: Title ===
