--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-02 03:09+0000\n"
+"POT-Creation-Date: 2021-06-04 02:55+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -75,7 +75,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Enable metrics. By default this will be enabled if the metrics extension is added.\n"
+"Enable metrics. By default this is false. If set to true, a metrics extension is required.\n"
 "--"
 msgstr ""
 
