Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc.po
@@ -109,7 +109,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc:47
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc:55
@@ -127,7 +127,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc:56
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc:58
