Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/grpc-getting-started.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/grpc-getting-started.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-25 02:33+0000\n"
+"POT-Creation-Date: 2021-06-05 02:50+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -259,7 +259,7 @@ msgstr "生成されたクラスができたので、 _hello_ サービスを実
 #: upstream/_versions/main/guides/grpc-getting-started.adoc:153
 #, fuzzy
 #| msgid "Quarkus also provides an additional model with Mutiny, a Reactive Programming API integrated in Quarkus.  Learn more about Mutiny on the link:getting-started-reactive#mutiny[Getting Started with Reactive guide].  A Mutiny implementation of this service would be:"
-msgid "With Quarkus, implementing a service requires to implement the generated service interface based on Mutiny, a Reactive Programming API integrated in Quarkus, and expose it as a CDI bean.  Learn more about Mutiny on the link:getting-started-reactive#mutiny[Getting Started with Reactive guide].  The service class must be annotated with the `@io.quarkus.grpc.GrpcService` annotation."
+msgid "With Quarkus, implementing a service requires to implement the generated service interface based on Mutiny, a Reactive Programming API integrated in Quarkus, and expose it as a CDI bean.  Learn more about Mutiny on the xref:mutiny-primer.adoc[Mutiny guide].  The service class must be annotated with the `@io.quarkus.grpc.GrpcService` annotation."
 msgstr "Quarkusは、Quarkusに統合されたReactive Programming APIであるMutinyを使用した追加モデルも提供しています。Mutinyの詳細については、 link:getting-started-reactive#mutiny[Getting Started with Reactiveガイド] を参照してください。このサービスのMutinyの実装は次のようになります。"
 
 #. type: Title ===
