--- a/l10n/po/ja_JP/_versions/main/guides/cdi-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/cdi-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-04 02:51+0000\n"
+"POT-Creation-Date: 2021-06-05 02:49+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1758,75 +1758,176 @@ msgstr ""
 msgid "Other interceptors could be provided to log method invocations to different targets."
 msgstr "他にも、異なるターゲットへのメソッド呼び出しをログに記録するためのインターセプターを提供することができます。"
 
+#. type: Title ===
+#: upstream/_versions/main/guides/cdi-reference.adoc:787
+#, no-wrap
+msgid "Caching the Result of Programmatic Lookup"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/cdi-reference.adoc:797
+msgid "In certain situations, it is practical to obtain a bean instance programmatically via an injected `javax.enterprise.inject.Instance` and `Instance.get()`.  However, according to the specification the `get()` method must identify the matching bean and obtain a contextual reference.  As a consequence, a new instance of a `@Dependent` bean is returned from each invocation of `get()`.  Moreover, this instance is a dependent object of the injected `Instance`.  This behavior is well-defined but it may lead to unexpected errors and memory leaks.  Therefore, Quarkus comes with the `io.quarkus.arc.WithCaching` annotation.  An injected `Instance` annotated with this annotation will cache the result of the `Instance#get()` operation.  The result is computed on the first call and the same value is returned for all subsequent calls, even for `@Dependent` beans."
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/cdi-reference.adoc:801
+#, fuzzy, no-wrap
+#| msgid "class Producers {\n"
+msgid "class Producer {\n"
+msgstr "class Producers {\n"
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/cdi-reference.adoc:804
+#, no-wrap
+msgid ""
+"  AtomicLong nextLong = new AtomicLong();\n"
+"  AtomicInteger nextInt = new AtomicInteger();\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/cdi-reference.adoc:810
+#, no-wrap
+msgid ""
+"   @Dependent\n"
+"   @Produces \n"
+"   Integer produceInt() {\n"
+"     return nextInt.incrementAndGet();\n"
+"   }\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/cdi-reference.adoc:817
+#, no-wrap
+msgid ""
+"   @Dependent\n"
+"   @Produces \n"
+"   Long produceLong() {\n"
+"     return nextLong.incrementAndGet();\n"
+"   }\n"
+"}\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/cdi-reference.adoc:819
+#, fuzzy, no-wrap
+#| msgid "class Producers {\n"
+msgid "class Consumer {\n"
+msgstr "class Producers {\n"
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/cdi-reference.adoc:822
+#, no-wrap
+msgid ""
+"  @Inject\n"
+"  Instance<Long> longInstance;\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/cdi-reference.adoc:826
+#, no-wrap
+msgid ""
+"  @Inject\n"
+"  @WithCaching\n"
+"  Instance<Integer> intInstance;\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/cdi-reference.adoc:832
+#, no-wrap
+msgid ""
+"  // this method should always return true\n"
+"  // Producer#produceInt() is only called once\n"
+"  boolean pingInt() {\n"
+"    return intInstance.get().equals(intInstance.get());\n"
+"  }\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/cdi-reference.adoc:839
+#, no-wrap
+msgid ""
+"  // this method should always return false\n"
+"  // Producer#produceLong() is called twice per each pingLong() invocation\n"
+"  boolean pingLong() {\n"
+"    return longInstance.get().equals(longInstance.get());\n"
+"  }\n"
+"}\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/cdi-reference.adoc:842
+msgid "It is also possible to clear the cached value via `io.quarkus.arc.InjectableInstance.clearCache()`. In this case, you'll need to inject the Quarkus-specific `io.quarkus.arc.InjectableInstance` instead of `javax.enterprise.inject.Instance`."
+msgstr ""
+
 #. type: Title ==
-#: upstream/_versions/main/guides/cdi-reference.adoc:788
+#: upstream/_versions/main/guides/cdi-reference.adoc:844
 #, no-wrap
 msgid "Build Time Extensions"
 msgstr "ビルド時間延長"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:794
+#: upstream/_versions/main/guides/cdi-reference.adoc:850
 msgid "Quarkus incorporates build-time optimizations in order to provide instant startup and low memory footprint.  The downside of this approach is that CDI Portable Extensions cannot be supported.  Nevertheless, most of the functionality can be achieved using Quarkus link:writing-extensions[extensions].  See the link:cdi-integration[integration guide] for more information."
 msgstr "Quarkus は、インスタント起動と低メモリフットプリントを提供するために、ビルド時間の最適化を取り入れています。このアプローチの欠点は、CDI ポータブル拡張機能をサポートできないことです。それにもかかわらず、ほとんどの機能は、Quarkus link:writing-extensions[エクステンション] を使用して行うことができます。詳細は、link:cdi-integration[統合ガイド] を参照してください。"
 
 #. type: Title ==
-#: upstream/_versions/main/guides/cdi-reference.adoc:795
+#: upstream/_versions/main/guides/cdi-reference.adoc:851
 #, no-wrap
 msgid "Development Mode"
 msgstr "開発モード"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:798
+#: upstream/_versions/main/guides/cdi-reference.adoc:854
 msgid "In the development mode, two special endpoints are registered automatically to provide some basic debug info in the JSON format:"
 msgstr "開発モードでは、JSON 形式で基本的なデバッグ情報を提供するために、2 つの特別なエンドポイントが自動的に登録されます。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:800
+#: upstream/_versions/main/guides/cdi-reference.adoc:856
 msgid "HTTP GET `/q/arc` - returns the summary; number of beans, config properties, etc."
 msgstr "HTTP GET `/q/arc` - 要約、Bean の数、設定プロパティーなどを返します。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:801
+#: upstream/_versions/main/guides/cdi-reference.adoc:857
 msgid "HTTP GET `/q/arc/beans` - returns the list of all beans"
 msgstr "HTTP GET `/q/arc/beans` - すべての Bean のリストを返します。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:802
+#: upstream/_versions/main/guides/cdi-reference.adoc:858
 msgid "You can use query params to filter the output:"
 msgstr "クエリーパラメーターを使用して出力をフィルタリングすることができます。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:803
+#: upstream/_versions/main/guides/cdi-reference.adoc:859
 msgid "`scope` - include beans with scope that ends with the given value, i.e. `http://localhost:8080/q/arc/beans?scope=ApplicationScoped`"
 msgstr "`scope` - 指定した値で終わるスコープを持つ Bean を含みます (つまり `http://localhost:8080/q/arc/beans?scope=ApplicationScoped`)。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:804
+#: upstream/_versions/main/guides/cdi-reference.adoc:860
 msgid "`beanClass` - include beans with bean class that starts with the given value, i.e. `http://localhost:8080/q/arc/beans?beanClass=org.acme.Foo`"
 msgstr "`beanClass` - 与えられた値で始まる Bean クラスを持つ Bean を含みます (つまり `http://localhost:8080/q/arc/beans?beanClass=org.acme.Foo`)。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:805
+#: upstream/_versions/main/guides/cdi-reference.adoc:861
 msgid "`kind` - include beans of the specified kind (`CLASS`, `PRODUCER_FIELD`, `PRODUCER_METHOD`, `INTERCEPTOR` or `SYNTHETIC`), i.e. `http://localhost:8080/q/arc/beans?kind=PRODUCER_METHOD`"
 msgstr "`kind` - 指定された種類の Bean (`CLASS`、`PRODUCER_FIELD`、`PRODUCER_METHOD`、`INTERCEPTOR`、または `SYNTHETIC`) を含みます (つまり `http://localhost:8080/q/arc/beans?kind=PRODUCER_METHOD`)。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:806
+#: upstream/_versions/main/guides/cdi-reference.adoc:862
 msgid "HTTP GET `/q/arc/removed-beans` - returns the list of unused beans removed during build"
 msgstr "HTTP GET `/q/arc/removed-beans` - ビルド中に削除された未使用の Bean のリストを返します。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:807
+#: upstream/_versions/main/guides/cdi-reference.adoc:863
 msgid "HTTP GET `/q/arc/observers` - returns the list of all observer methods"
 msgstr "HTTP GET `/q/arc/observers` - すべてのオブザーバーメソッドのリストを返します。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:809
+#: upstream/_versions/main/guides/cdi-reference.adoc:865
 msgid "These endpoints are only available in the development mode, i.e. when you run your application via `mvn quarkus:dev` (or `./gradlew quarkusDev`)."
 msgstr "これらのエンドポイントは開発モードでのみ使用できます。つまり `mvn quarkus:dev` (または `./gradlew quarkusDev`) 経由でアプリケーションを実行したときです。"
 
 #. type: Title ==
-#: upstream/_versions/main/guides/cdi-reference.adoc:812
+#: upstream/_versions/main/guides/cdi-reference.adoc:868
 #, no-wrap
 msgid "ArC Configuration Reference"
 msgstr ""
