--- a/l10n/po/ja_JP/_versions/main/guides/reactive-sql-clients.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/reactive-sql-clients.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-08 02:39+0000\n"
+"POT-Creation-Date: 2021-06-05 02:50+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -210,7 +210,9 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/reactive-sql-clients.adoc:106
-msgid "In this guide, we will use the Mutiny API of the Reactive PostgreSQL Client.  If you're not familiar with Mutiny reactive types, read the link:getting-started-reactive#mutiny[Getting Started with Reactive guide] first."
+#, fuzzy
+#| msgid "In this guide, we will use the Mutiny API of the Reactive PostgreSQL Client.  If you're not familiar with Mutiny reactive types, read the link:getting-started-reactive#mutiny[Getting Started with Reactive guide] first."
+msgid "In this guide, we will use the Mutiny API of the Reactive PostgreSQL Client.  If you are not familiar with Mutiny, check xref:mutiny-primer.adoc[Mutiny - an intuitive reactive programming library]."
 msgstr "このガイドでは、Reactive PostgreSQLクライアントのMutiny APIを使用します。Mutinyのリアクティブ型に慣れていない場合は、まず link:getting-started-reactive#mutiny[Getting Started with Reactiveガイド] を読んでください。"
 
 #. type: Title ===
