Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/getting-started-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/getting-started-reactive.adoc.po
@@ -148,7 +148,7 @@ msgstr ""
 #: upstream/_versions/main/guides/getting-started-reactive.adoc:68
 #, no-wrap
 msgid "Reactive"
-msgstr ""
+msgstr "リアクティブ"
 
 #. type: Target for macro image
 #: upstream/_versions/main/guides/getting-started-reactive.adoc:68
@@ -581,7 +581,7 @@ msgstr ""
 #: upstream/_versions/main/guides/getting-started-reactive.adoc:319
 #, no-wrap
 msgid "Going further"
-msgstr ""
+msgstr "さらに詳しく"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/getting-started-reactive.adoc:323
