--- a/l10n/po/ja_JP/_versions/main/guides/quarkus-reactive-architecture.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/quarkus-reactive-architecture.adoc.po
@@ -76,7 +76,7 @@ msgstr ""
 #: upstream/_versions/main/guides/quarkus-reactive-architecture.adoc:101
 #, no-wrap
 msgid "Reactive"
-msgstr ""
+msgstr "リアクティブ"
 
 #. type: Target for macro image
 #: upstream/_versions/main/guides/quarkus-reactive-architecture.adoc:32
@@ -318,7 +318,7 @@ msgstr ""
 #: upstream/_versions/main/guides/quarkus-reactive-architecture.adoc:166
 #, no-wrap
 msgid "Data"
-msgstr ""
+msgstr "データ"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/quarkus-reactive-architecture.adoc:169
