Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-redis-client-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-redis-client-general-config-items.adoc.po
@@ -851,7 +851,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-redis-client-general-config-items.adoc:771
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-redis-client-general-config-items.adoc:452
