--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-redis-client.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-redis-client.adoc.po
@@ -865,7 +865,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-redis-client.adoc:780
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-redis-client.adoc:461
